force-app/main/default/objects/SS_Survey_Response_Feedback__c/SS_Survey_Response_Feedback__c.object-meta.xml
<CustomObject>
    <label>Survey Response Feedback</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Response Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>