force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/Response_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Type__c</fullName>
    <label>Response Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>