force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Answer_Text__c.field-meta.xml
<CustomField>
    <fullName>SS_Answer_Text__c</fullName>
    <label>Answer Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>