force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Contact__c.field-meta.xml
<CustomField>
    <fullName>SS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Response Feedback</relationshipLabel>
    <relationshipName>Survey_Response_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>