force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Contact Id</label>
    <length>221</length>
    <type>Text</type>
</CustomField>