force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Create_DateTime__c.field-meta.xml
<CustomField>
    <fullName>SS_Create_DateTime__c</fullName>
    <label>Create DateTime</label>
    <type>DateTime</type>
</CustomField>