force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Feedback__c.field-meta.xml
<CustomField>
    <fullName>SS_Feedback__c</fullName>
    <label>Feedback</label>
    <length>221</length>
    <type>Text</type>
</CustomField>