force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_NPS_Trigger_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_NPS_Trigger_Id__c</fullName>
    <label>NPS Trigger Id</label>
    <length>221</length>
    <type>Text</type>
</CustomField>