force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Response_Id__c.field-meta.xml
<CustomField>
    <fullName>SS_Response_Id__c</fullName>
    <label>Response Id</label>
    <length>221</length>
    <type>Text</type>
</CustomField>