force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Score__c.field-meta.xml
<CustomField>
    <fullName>SS_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>