force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>SS_Sentiment__c</fullName>
    <label>Sentiment</label>
    <length>221</length>
    <type>Text</type>
</CustomField>