force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_State__c.field-meta.xml
<CustomField>
    <fullName>SS_State__c</fullName>
    <label>State</label>
    <length>221</length>
    <type>Text</type>
</CustomField>