force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Survey__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>SS_Survey__c</referenceTo>
    <relationshipLabel>Survey Response Feedback</relationshipLabel>
    <relationshipName>Survey_Response_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>