force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>SS_Survey_Type__c</fullName>
    <formula>IF(SS_Survey__r.SS_Survey_Type__c == &apos;NPS&apos;, &apos;NPS&apos;, &apos;CSAT&apos;)</formula>
    <label>Survey Type</label>
    <type>Text</type>
</CustomField>