force-app/main/default/objects/SS_Survey_Response_Feedback__c/fields/SS_Tags__c.field-meta.xml
<CustomField>
    <fullName>SS_Tags__c</fullName>
    <label>Tags</label>
    <length>221</length>
    <type>Text</type>
</CustomField>